terraform/main.tf
provider "aws" {
    region = "us-east-1"
    profile = "amanankit2021"
    }

    # resource "<providers> <resource_type>" "name" {
    #     config options..
    #     key = "value"
    #     key2 = "value"
    # }
  
        variable "subnet_prefix" {
            description = "cidr block for subnet"
            #default = 
            type = string
          
        }
    # 1. Create vpc
        resource "aws_vpc" "prod-vpc" {
            cidr_block = var.subnet_prefix
            tags = {
                Name = "production"
            }
          }

    # 2. Create Internet Gateway
        resource "aws_internet_gateway" "gw" {
            vpc_id = aws_vpc.prod-vpc.id
        }

    # 3. Create Custom Route Table
        resource "aws_route_table" "prod-route-table" {
            vpc_id = aws_vpc.prod-vpc.id

        route {
            cidr_block = "0.0.0.0/0"
            gateway_id = aws_internet_gateway.gw.id
        }

        route {
            ipv6_cidr_block = "::/0"
            gateway_id = aws_internet_gateway.gw.id
        }

          tags = {
            Name = "Prod"
          }
        }

    # 4. Create a subnet
        resource "aws_subnet" "subnet-1" {
            vpc_id = aws_vpc.prod-vpc.id
            cidr_block = "10.0.1.0/24"
            availability_zone = "us-east-1a"

            tags = {

            Name = "prod-subnet"}
        }

    # 5. Associate subnet with route Table
        resource "aws_route_table_association" "a" {
            subnet_id = aws_subnet.subnet-1.id
            route_table_id = aws_route_table.prod-route-table.id  
        }

    # 6. Create security group to allow port 22,80,443
        resource "aws_security_group" "allow_web" {
            name = "allow_web_traffic"
            description = "allow web inbound traffic"
            vpc_id = aws_vpc.prod-vpc.id

            ingress {
                description = "HTTPS"
                from_port = 443
                to_port = 443
                protocol = "tcp"
                cidr_blocks = ["0.0.0.0/0"]
                }
            ingress {
                description = "HTTP"
                from_port = 80
                to_port = 80
                protocol = "tcp"
                cidr_blocks = ["0.0.0.0/0"]
                }
            ingress {
                description = "SSH"
                from_port = 22
                to_port = 22
                protocol = "tcp"
                cidr_blocks = ["0.0.0.0/0"]
                }       

            egress {
                description = "SSH"
                from_port = 0
                to_port = 0
                protocol = "-1"
                cidr_blocks = ["0.0.0.0/0"]
                }      
            tags = {
                name = "allow_web"
            } 
        }
    # 7. Create a network interface with an IP in the subnet that was created in step 4
        resource "aws_network_interface" "web-server-nic" {
            subnet_id = aws_subnet.subnet-1.id
            private_ip = "10.0.1.50"
            security_groups = [aws_security_group.allow_web.id]
          
        }
    # 8. Assign an elastic IP to the network interface created in step 7
        resource "aws_eip" "one" {
            domain = "vpc"
            network_interface         = aws_network_interface.web-server-nic.id
            associate_with_private_ip = "10.0.1.50"
            depends_on                = [aws_internet_gateway.gw  ]

          
        }

        output "server_public_ip" {
            value = aws_eip.one.public_ip
          
        }
    # 9. Create an ubuntu server and install/enable apache
        resource "aws_instance" "naweb-server-instance" {
            ami = "ami-0fc5d935ebf8bc3bc"
            instance_type = "t2.micro"
            availability_zone = "us-east-1a"
            key_name = "aman"
            network_interface {
                device_index = 0
                network_interface_id = aws_network_interface.web-server-nic.id
            }
            user_data = <<-EOF
                        #!/bin/bash
                        sudo apt update -y
                        sudo apt install apache2 -y
                        EOF
            tags = {
              Name = "ubuntu"}
          
        }
